--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.0.0
 homepage: https://github.com/farhanfadila1717/stream_duration
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.10.4 <3.0.0'
 
 dev_dependencies:
-  pedantic: ^1.10.0
-  test: ^1.16.0
+  #pedantic: ^1.10.0
+  #test: ^1.16.0
